--- a/app-login/package.json
+++ b/app-login/package.json
@@ -17,6 +17,7 @@
     "expo": "~54.0.18",
     "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
+    "lucide-react-native": "^0.553.0",
     "react": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
