--- a/app-skillbridge/package.json
+++ b/app-skillbridge/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.13.2",
     "babel-preset-expo": "^54.0.6",
     "expo": "~54.0.18",
     "expo-status-bar": "~3.0.8",
